Fix bug 161249: when a window is maximized, but partially offscreen, bits of the window were erased and not correctly redrawn, because of a historic EraseRect(), and some short-circuiting in the maximize code, so fix those. r=ben, sr=bryner.